[gd_scene load_steps=2 format=3 uid="uid://dcrrplu4xc6e0"]

[ext_resource type="Script" path="res://Rooms/dungeon_generator_test.gd" id="1_test_script"]

[node name="DungeonGeneratorTest" type="Node2D"]
script = ExtResource("1_test_script")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 450)
zoom = Vector2(0.3, 0.3)

[node name="DungeonContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 500.0
grow_horizontal = 0

[node name="TitleLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Dungeon Generator Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="GridWidthLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Grid Width: 5"

[node name="GridWidthSlider" type="HSlider" parent="UI/Control/VBoxContainer"]
layout_mode = 2
min_value = 3.0
max_value = 10.0
value = 5.0

[node name="GridHeightLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Grid Height: 5"

[node name="GridHeightSlider" type="HSlider" parent="UI/Control/VBoxContainer"]
layout_mode = 2
min_value = 3.0
max_value = 10.0
value = 5.0

[node name="MinRoomsLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Min Rooms: 8"

[node name="MinRoomsSlider" type="HSlider" parent="UI/Control/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 20.0
value = 8.0

[node name="MaxRoomsLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Max Rooms: 15"

[node name="MaxRoomsSlider" type="HSlider" parent="UI/Control/VBoxContainer"]
layout_mode = 2
min_value = 10.0
max_value = 30.0
value = 15.0

[node name="HSeparator2" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Generate Dungeon"

[node name="ClearButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Clear Dungeon"

[node name="HSeparator3" type="HSeparator" parent="UI/Control/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Click 'Generate Dungeon' to start"
autowrap_mode = 3

[node name="StatsLabel" type="Label" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Stats will appear here"
autowrap_mode = 3
